# gltf2md5mesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gltfToMd5.cpp  gltfToMd5.hpp  md5Model.cpp  md5Model.hpp  precompiled.hpp
assets/model/: bob_lamp_update.glb
assets/shaders/: render_md5.fs  render_md5.gs  render_md5.vs  render_md5b.vs
md5View/: OpenGL.cpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp  md5View.cpp  md5View.hpp
